...
            android:hint="@string/edit_text_preset_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:text="@={viewModel.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <NumberPicker
            android:id="@+id/numberPickerHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:value="@={viewModel.hours}"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView11"
            app:layout_constraintEnd_toStartOf="@+id/materialTextView11"
            app:layout_constraintHorizontal_bias="0.5"
...
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBottom_toBottomOf="@+id/numberPickerMinutes"
            app:layout_constraintEnd_toStartOf="@+id/numberPickerMinutes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/numberPickerHours"
            app:layout_constraintTop_toTopOf="@+id/numberPickerMinutes" />

        <NumberPicker
...
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBottom_toBottomOf="@+id/numberPickerSeconds"
            app:layout_constraintEnd_toStartOf="@+id/numberPickerSeconds"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/numberPickerMinutes"
            app:layout_constraintTop_toTopOf="@+id/numberPickerSeconds" />

        <NumberPicker
...
