<resources>
    <string name="app_name">TimesUp</string>
    <string name="editor_edit_title">Edit Preset</string>
    <string name="editor_new_title">New Preset</string>
    <string name="button_save">Save</string>
    <string name="edit_text_preset_name_hint">Name (e.g. Brew Coffee, Soft-boiled Eggs, etc.)</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="preset_empty_message">Click the Add button to create a new preset.</string>
    <string name="button_start">Start</string>
    <string name="button_pause">Pause</string>
...
