...
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:text="@{viewModel.timer.preset.name}"
                android:textAppearance="?attr/textAppearanceHeadline4"
                app:layout_constraintBottom_toTopOf="@id/textViewTimeLeft"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@tools:sample/lorem[5]" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewTimeLeft"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="12:34:56" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonStart"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:enabled="@{viewModel.startButtonEnabled}"
                android:onClick="@{() -> viewModel.timer.start()}"
...
